Change button orientation and fix font sizing issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,9 @@
   --cp-dark-blue:#012742 ;
   --cp-section-blue: #55A4DE;
 }
+.ui-loader{
+  visibility: hidden;
+}
 /*font Weights 300, 500 and 900, use the following classes for */
 .light-font{
   font-family:'Roboto',sans-serif;
@@ -16,13 +19,28 @@
   font-weight: 900;
 }
 /*Global CSS Classes*/
+/*Font Adjustments for iPhone Sized screens*/
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) 
+and (orientation : portrait) { 
+  .field-label{
+  font-size:0.8em;
+  }
+    .subtotal-field, .subtotal-label{
+    font-size: 1.2em !important;
+  }
+
+
+}
+
 .section-header{
   background-color: #55A4DE;
   height:40px;
   margin: 10px 0px 10px;
-  padding-top: 3px;
+  padding-top: 1px;
   color:#FFFFFF;
-  font-size: 2.5rem;
+  font-size: 2em;
 }
 .form-control{
   cursor: pointer;
@@ -42,7 +60,7 @@
 }
 /*CSS class for unit labels*/
 .unit-label{
-  font-size: 1.5rem;
+  font-size: 1em;
   margin-top:5px;
   padding: 0px 0px 0px 5px;
 }
@@ -60,13 +78,13 @@ input[type=number]::-webkit-outer-spin-button {
 .main-title{
   background-color: #012742;
   color:white;
-  font-size: 4rem;
+  font-size: 3.5em;
   height: 72px;
   text-align: center
 }
 .title-text{
   vertical-align: middle;
-  padding-top: 8px;
+  padding-top: 0 px;
 }
 .header{
   height:130px;
@@ -104,34 +122,33 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .control-btn{
   background-color: #55A4DE;
-  width:100%;
-  height:50%;
+  width:49%;
+  height:100%;
+  display: inline-block;
   color:white;
   text-align: center;  
+  cursor:pointer;
+  cursor:hand;
+  padding-top: 7px
 }
 .effect-input{
   margin-top: 4px;
 }
 
 .add-value-btn{
-  border-radius: 5px 5px 0px 0px;
-  margin-bottom: 2px;
-  height:18px;
-  cursor:pointer;
-  cursor:hand;
-}
+  border-radius: 5px 0px 0px 5px;
 
+}
+.minus-value-btn{
+  border-radius: 0px 5px 5px 0px;
+  float: right;
+  user-select:none;
+}
 .add-value-btn:active, .minus-value-btn:active{
   background-color: #012742;
 }
 
-.minus-value-btn{
-  border-radius: 0px 0px 5px 5px;
-  height:18px;
-  cursor:pointer;
-  cursor:hand;
-  user-select:none;
-}
+
 
 .background-shading{
   background: linear-gradient(to right, white 0%, white);
@@ -146,16 +163,17 @@ input[type=number]::-webkit-outer-spin-button {
 .subtotal{
   border-top:2px solid #012742; 
   margin-top: 15px !important;
+  padding-top: 5px;
 }
 
 .subtotal-field{
   text-align: center;
-  font-size: 2rem;
+  font-size: 1.5em;
 }
 
 .subtotal-label{
   text-align: right;
-  font-size: 2rem;
+  font-size: 1.5em;
 }
 
 .input-column{
